fixed ObjectID issue, implemented pipe combinations feature

--- a/frontend/src/app/pages/draw/draw.component.css
+++ b/frontend/src/app/pages/draw/draw.component.css
@@ -1,5 +1,5 @@
-canvas {
-    /* position: absolute; */
+.canvas {
+    position: absolute;
     margin-top: 20px;
     width: 97.7vw;
     height: 2001px;
