--- a/frontend/src/app/pages/rooms/rooms.component.html
+++ b/frontend/src/app/pages/rooms/rooms.component.html
@@ -5,6 +5,7 @@
             <td>Id</td>
             <td>Площадь</td>
             <td>Дата создания</td>
+            <td>Изображение</td>
         </tr>
     </thead>
     <tbody>
