--- a/frontend/src/app/pages/draw/draw.component.html
+++ b/frontend/src/app/pages/draw/draw.component.html
@@ -1,6 +1,8 @@
-<canvas #gridCanvas class="canvas"></canvas>
-<canvas #userCanvas class="canvas"></canvas>
-    <div *ngIf="status" [style.left.px]="coordinates.x" [style.top.px]="coordinates.y" class="info">
+<div class="canvas-container">
+    <canvas #gridCanvas class="canvas"></canvas>
+    <canvas #userCanvas class="canvas"></canvas>
+</div>
+<div *ngIf="status" [style.left.px]="coordinates.x" [style.top.px]="coordinates.y" class="info">
     <p>x: {{ point.x }}м y: {{ point.y }}м</p>
     <p>Угол: {{ angle | number: '1.1-1' }}°</p>
     <p>Расстояние: {{ distance | number: '1.1-1' }}м</p>
